--- a/U6_A2/product.htm
+++ b/U6_A2/product.htm
@@ -49,14 +49,11 @@
     <div style="display: flex; justify-content: center; align-items: center; gap: 400px;">
         <body>
     <div style="display: flex; justify-content: center; align-items: center; gap: 400px;">
-    <a href="https://www.easports.com/uk/fifa.html">
-        <p style="font-size: 24px; font-weight: bold; text-decoration: underline; color: black;">FIFA 19</p>
+        <p style="font-size: 24px; font-weight: bold; text-decoration: underline; color: black;">Rolling Monkeys</p>
     </a>
-    <a href="https://www.nintendo.com/en-gb/Games/Wii/Super-Mario-Galaxy-2-529982.html?srsltid=AfmBOooLnaARpzH0e5qMtMOTJpnL3rzwohc1nIXaiudLjQMjbx2hrM9_">
-        <p style="font-size: 24px; font-weight: bold; text-decoration: underline; color: black;">Super Mario Galaxy 2</p>
+        <p style="font-size: 24px; font-weight: bold; text-decoration: underline; color: black;">Lost In Space</p>
     </a>
-    <a href="https://www.warnerbros.com/games-and-apps/batman-arkham-city">
-        <p style="font-size: 24px; font-weight: bold; text-decoration: underline; color: black;">Batman Arkham City</p>
+        <p style="font-size: 24px; font-weight: bold; text-decoration: underline; color: black;">Western Wonder</p>
     </a>
     </div>
 </body>
