--- a/U6_A2/contact.htm
+++ b/U6_A2/contact.htm
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About - Celtec Games</title>
+    <title>Contact - Celtec Games</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="slides.css">
     <link rel="stylesheet" href="contact.css">
